--- a/index.html
+++ b/index.html
@@ -116,28 +116,30 @@
 
                 <div class="row">
                     <div class="col-6">
-                        <div class="shop-item-1">
+                        <div class="shop-item">
+                            <img src="src/images/shop/skate.png" alt="" class="shop-img">
                             <div class="shop-content">
                                 <img src="/src/images/shop/Frame.svg" alt="">
-                                <span class="shop-h6">
-                                    Shop Boosted Boards
-                                </span>
-                                <span class="shop-p">
+                                <p class="shop-title">
+                                    Shop Boosted Boards <br>
+                                </p>
+                                <p class="shop-text">
                                     In Stock
-                                </span>
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="shop-item-2">
+                        <div class="shop-item">
+                        <img src="src/images/shop/samokat.png" alt="" class="shop-img" >
                             <div class="shop-content">
                                 <img src="/src/images/shop/Frame.svg" alt="">
-                                <span class="shop-h6">
-                                    Shop Boosted Boards
-                                </span>
-                                <span class="shop-h6">
+                                <p class="shop-title">
+                                    Shop Boosted Boards <br>
+                                </p>
+                                <p class="shop-text">
                                     In Stock
-                                </span>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -183,9 +185,9 @@
                 </div>
                 <div class="col-4">
                     <div class="samokat-item">
-                        <h5 class="samoakt-title">
+                        <h2 class="samoakt-title">
                             Boosted Revs
-                        </h5>
+                        </h2>
                         <p class="samokat-text">
                             There's never been an electric scooter quite like <br> this. Speed past traffic at 24 mph.
                             Go up to 22 <br> miles on a single charge. You'll get there in no time <br> at all. Stop and
@@ -208,9 +210,7 @@
                     <img src="src/images/plus/convers.png" alt="" class="plus-img">
                     <div class="plus-content">
                         <span class="plus-title">
-                            Shop Boosted Stealth
-                        </span>
-                        <span>
+                            Shop Boosted Steal <br>
                             <a href="#" class="plus-text">
                             In Stock
                         </a>
@@ -221,7 +221,7 @@
                     <img src="src/images/plus/shlem.png" alt="" class="plus-img">
                     <div class="plus-content">
                         <span class="plus-title">
-                            Shop Boosted Plus
+                            Shop Boosted Plus <br>
                         </span>
                         <span>
                             <a href="#" class="plus-text">
@@ -234,7 +234,7 @@
                     <img src="src/images/plus/kare.png" alt="" class="plus-img">
                     <div class="plus-content">
                         <span class="plus-title">
-                            Shop Boosted Mini
+                            Shop Boosted Mini <br>
                         </span>
                         <span>
                             <a href="#" class="plus-text">
@@ -260,7 +260,7 @@
                 </div>
                 <div class="col-6">
                     <div class="video-item">
-                        <a href="https://www.youtube.com/watch?v=oAQxk9dOJ8k" class="video-play"><img
+                        <a href="https://www.youtube.com/watch?v=oAQxk9dOJ8k" data-fancybox class="video-play"><img
                                 src="src/images/video/tri%20samok.png" alt=""></a>
                     </div>
                 </div>
@@ -270,68 +270,77 @@
 
 
     <section class="slider">
-        <div class="container">
-            <div class="row">
-                <div class="col-2">
-                    <div class="slider-item">
-                        <div class="owl-carousel carousel">
-                            <img src="src/images/slider/Rectangle.png" alt="" class="slider-link">
-                            <a href="#" class="slider-link">Rev Tube</a>
-                            <p class="slider-text">
-                                $16.00 <p class="slider-price">$19.00</p>
-
-                        </div>
-                    </div>
-                    <div class="col-2">
+        <h2 class="slider-title">
+            Looking for Accessories?
+        </h2>
+                <div class="owl-carousel carousel">
+                          <div class="slider-item">
+                              <img src="/src/images/slider/Rectangle.png" alt="">
+                              <div class="slider-content">
+                                  <p class="slider-text">
+                                      Rev Tube
+                                  </p>
+                                  <p class="slider-price">
+                                      $16.00 <a href="#" class="slider-ora">$19.00</a>
+                                  </p>
+                              </div>
+                          </div>
                         <div class="slider-item">
-                            <img src="src/images/slider/Rectangle%20(1).png" alt="" class="slider-link">
-                            <a href="#" class="slider-link">Boosted Rev Stem Catch</a>
-                            <p class="slider-text">
-                                $19.00 <p class="slider-price">$29.00</p>
-
+                            <img src="/src/images/slider/Rectangle (1).png" alt="">
+                            <div class="slider-content">
+                                <p class="slider-text">
+                                    Boosted Rev Stem Catch
+                                </p>
+                                <p class="slider-price">
+                                    $19.00 <a href="#" class="slider-ora">$29.00</a>
+                                </p>
+                              </div>
                         </div>
-                    </div>
-                    <div class="col-2">
                         <div class="slider-item">
-                            <img src="src/images/slider/Rectangle%20(2).png" alt="" class="slider-link">
-                            <a href="#" class="slider-link">Stomp Brake Fender</a>
-                            <p class="slider-text">
-                                Sold Out
-                            </p>
+                            <img src="/src/images/slider/Rectangle (2).png" alt="">
+                            <div class="slider-content">
+                                <p class="slider-text">
+                                    Stomp Brake Fender
+                                </p>
+                                <p class="slider-price">
+                                    Sold Out
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-2">
                         <div class="slider-item">
-                            <img src="src/images/slider/Rectangle%20(3).png" alt="" class="slider-link">
-                            <a href="#" class="slider-link">Boosted Belt Kit</a>
-                            <p class="slider-text">
-                                $25.00
-                            </p>
+                            <img src="/src/images/slider/Rectangle (3).png" alt="">
+                            <div class="slider-content">
+                                <p class="slider-text">
+                                    Boosted Belt Kit
+                                </p>
+                                <p class="slider-price">
+                                    $25.00 
+                                </p>
+                            </div>
                         </div>
-                    </div>
-
-                    <div class="col-2">
                         <div class="slider-item">
-                            <img src="src/images/slider/Rectangle%20(4).png" alt="" class="slider-link">
-                            <a href="#" class="slider-link">Bearing Service Kit</a>
-                            <p class="slider-text">
-                                $50.00
-                            </p>
+                            <img src="/src/images/slider/Rectangle (4).png" alt="">
+                            <div class="slider-content">
+                                <p class="slider-text">
+                                    Bearing Service Kit
+                                </p>
+                                <p class="slider-price">
+                                    $50.00
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-2">
                         <div class="slider-item">
-                            <img src="src/images/slider/Rectangle%20(5).png" alt="" class="slider-link">
-                            <a href="#" class="slider-link">Boosted Pulley / Belt Upgrade Kit</a>
-                            <p class="slider-text">
-                                $75.00
-                            </p>
+                            <img src="/src/images/slider/Rectangle (5).png" alt="">
+                            <div class="slider-content">
+                                <p class="slider-text">
+                                    Boosted Skid Plates
+                                </p>
+                                <p class="slider-price">
+                                    $20.00
+                                </p>
+                            </div>
                         </div>
-                        </div>
-
-                </div>
-            </div>
-        </div>
+                     </div>         
     </section>
 
     <div class="white-box"></div>
@@ -348,7 +357,7 @@
                                 Go Fast
                             </h2>
                             <p class="go-text">
-                                Boosted is known for its premium <br> performance boards offering a next- <br>level
+                                Boosted is known for its premium performance boards offering a next-level
                                 experience.
                             </p>
                         </div>
@@ -362,7 +371,7 @@
                                 Go Far
                             </h2>
                             <p class="go-text">
-                                With optional extended battery life, you can <br> get wherever you need to go reliably.
+                                With optional extended battery life, you can get wherever you need to go reliably.
                             </p>
                         </div>
                     </div>
@@ -375,7 +384,7 @@
                                 Go Safe
                             </h2>
                             <p class="go-text">
-                                Safety is a #1 priority for Boosted, always <br> wear a helmet when riding.
+                                Safety is a #1 priority for Boosted, always wear a helmet when riding.
                             </p>
                         </div>
                     </div>
@@ -388,7 +397,7 @@
                                 Built to Last
                             </h2>
                             <p class="go-text">
-                                Boosted products are engineered to last <br> for years and are extremely reliable.
+                                Boosted products are engineered to last for years and are extremely reliable.
                             </p>
                         </div>
                     </div>
@@ -490,6 +499,6 @@
 <script src="src/libs/jquery/jquery.js"></script>
 <script src="src/libs/fancybox/jquery.fancybox.min.js"></script>
 <script src="src/libs/owl-carousel/owl.carousel.min.js"></script>
-<script src="src/js/srcipt.js"></script>
+<script src="src/js/script.js"></script>
 </body>
 </html>
